# Trade-Pilot

./: .env.creon.example  .env.example  .gitignore  README.md  README_dev.md  docker-compose.creon-gateway.yml  docker-compose.windows.yml  docker-compose.yml
admin-web/: Dockerfile  index.html  package-lock.json  package.json  vite.config.ts
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/versions/: 0001_initial.py  0002_user_auth_sessions.py  0003_order_lifecycle.py  0004_user_trading_settings.py
backend/app/: __init__.py  main.py  models.py  schemas.py
backend/app/api/: routes.py
backend/app/broker/: base.py  creon.py  creon_gateway.py  factory.py  paper.py
backend/app/core/: auth.py  config.py
backend/app/market/: data.py
backend/app/services/: account_reconciliation.py  agent_orchestrator.py  assistant_workspace.py  order_lifecycle.py  risk.py  skill_catalog.py  trading_engine.py  trading_safety.py
backend/app/skills/: __init__.py  account_reconciliation.md  admin_dashboard.md  ai_trade_decision.md  auth_admin_session.md  broker_adapters.md  creon_gateway.md  decision_history.md  index.md  market_snapshot.md  order_management.md  portfolio_positions.md  risk_guardrails.md  system_status_and_config.md
backend/tests/: test_account_reconciliation.py  test_auth_profile.py  test_order_lifecycle.py  test_risk.py
docs/: ARCHITECTURE.md
frontend/: App.tsx  app.json  package.json
gateway/: Dockerfile.windows  README.md  config.py  creon_client.py  main.py  requirements.txt  schemas.py
scripts/: dev_backend.sh  dev_user_web.sh
(+17 files in other folders)
